tests/semantic_errors/testcase17.c
// function only declared

int foo(int);

int main(void){
    return 2;
}